removed bad character from easy_install

--- a/python/playbook.yml
+++ b/python/playbook.yml
@@ -10,6 +10,10 @@
       - python-devel
 
   - name: "Install PIP"
-    - easy_install:
-        name: pip
-        state: latest
+      easy_install:
+      name: pip
+      state: latest
+
+  - name: "Install Python Libraries with Pip"
+      pip:
+        name: NumPy, SciPy, ansible, apache-libcloud, matplotlib
