corrected package name

--- a/base/playbook.yml
+++ b/base/playbook.yml
@@ -7,5 +7,5 @@
       yum: name={{ item }} state=present
       with_items:
         - gcc
-        - gcc++
+        - gcc-c++
         - kernel-headers
