--- a/python/playbook.yml
+++ b/python/playbook.yml
@@ -12,7 +12,7 @@
     - name: Install PIP
       easy_install:
         name: pip
-        state: latest
+        state: present
 
     - name: Install Python Libraries with PIP
       pip:
