adding openjdk-11-jdk to ubuntu

--- a/base/playbook.yml
+++ b/base/playbook.yml
@@ -19,4 +19,4 @@
     - name: Install Dev Tools
       apt: name={{ item }} state=present
       with_items:
-        -  openjdk-9-jre-headless
+        -  openjdk-11-jdk
