--- a/base/playbook.yml
+++ b/base/playbook.yml
@@ -20,3 +20,5 @@
       apt: name={{ item }} state=present
       with_items:
         -  openjdk-11-jdk
+        -  sqlite3
+        -  libsqlite3-dev
