added port declaration to mysql container.

--- a/d8_docker/deploy_d8.yml
+++ b/d8_docker/deploy_d8.yml
@@ -8,6 +8,8 @@
         name: d8-mysql
         image: mysql
         state: started
+        ports:
+         - 3306
         env:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: drupal
