--- a/d8_docker/deploy_d8.yml
+++ b/d8_docker/deploy_d8.yml
@@ -24,5 +24,5 @@
         ports:
           - 8080:80
         links:
-          - d8-mysql:mysql:5.7
+          - "d8-mysql:mysql:5.7"
         state: started
