--- a/d8_docker/deploy_d8.yml
+++ b/d8_docker/deploy_d8.yml
@@ -7,6 +7,7 @@
       docker_container:
         name: d8-mysql
         image: mysql
+        tags: 5.7
         state: started
         ports:
          - 3306:3306
@@ -24,5 +25,5 @@
         ports:
           - 8080:80
         links:
-          - "d8-mysql:mysql:5.7"
+          - d8-mysql:mysql
         state: started
